--- a/index.html
+++ b/index.html
@@ -9,4 +9,8 @@
     <h1> Olá, esse é o meu código HTML. </h1>
     <button>Novo botão</button>
 </body>
+<body>
+  <img src="peppapig.webp" height="200px" width="200px">
+  <p style=" color: red;">esse é um exemplo</p>
+</body>
 </html>
