adicionando cor ao fundo da pagina

--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body style= "background-color: rgb(0, 255, 102); "></body>
     <h1> Olá, esse é o meu código HTML. </h1>
     <button>Novo botão</button>
-</body>
-<body>
+    <br><br>
   <img src="peppapig.webp" height="200px" width="200px">
-  <p style=" color: red;">esse é um exemplo</p>
+  <p style=" color: red;">esse é um exemplo de paragrafo</p>
 </body>
 </html>
